[package]
name = "ferrousc_main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferrousc_lexer = { path = "../ferrousc_lexer" }
ferrousc_parser = { path = "../ferrousc_parser" }
ferrousc_ast = { path = "../ferrousc_ast" }